<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.fragments.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/details_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7.5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/return_to_the_main_screen"
                android:padding="17.5dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/big_book_recycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/big_book_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/details_description_shape"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingTop="22dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_block">

            <LinearLayout
                android:id="@+id/readers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/likes"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/readers_count"
                    style="@style/BookDescriptionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_700"
                    tools:text="22.2k" />

                <TextView
                    android:id="@+id/readers_heading"
                    style="@style/BookDescriptionKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_600"
                    android:text="@string/readers" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/quotes"
                app:layout_constraintStart_toEndOf="@id/readers"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/likes_count"
                    style="@style/BookDescriptionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_700"
                    tools:text="10.4k" />

                <TextView
                    android:id="@+id/likes_heading"
                    style="@style/BookDescriptionKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_600"
                    android:text="@string/likes" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/quotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/genre"
                app:layout_constraintStart_toEndOf="@id/likes"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/quotes_count"
                    style="@style/BookDescriptionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_700"
                    tools:text="32.5k" />

                <TextView
                    android:id="@+id/quotes_heading"
                    style="@style/BookDescriptionKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_600"
                    android:text="@string/quotes" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/quotes"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/genre_value"
                    style="@style/BookDescriptionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_sans_700"
                    android:maxWidth="110dp"
                    android:maxLines="1"
                    tools:text="Science" />

                <TextView
                    android:id="@+id/genre_heading"
                    style="@style/BookDescriptionKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_sans_600"
                    android:text="@string/genre" />
            </LinearLayout>


            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?disabled_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/readers" />

            <TextView
                android:id="@+id/summary_heading"
                style="@style/DescriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_sans_700"
                android:text="@string/summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_1" />

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_600"
                android:textColor="?main_text_2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_heading"
                tools:text="According to researchers at Duke University, habits account for about 40 percent of our behaviors on any given day. Your life today is essentially the sum of your habits. How in shape or out of shape you are? A result of your habits. How happy or unhappy you are? A result of your habits. How successful or unsuccessful you are? A result of your habits." />

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?disabled_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary" />

            <TextView
                android:id="@+id/you_will_like_heading"
                style="@style/DescriptionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_sans_700"
                android:text="@string/you_will_also_like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/you_like_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="-16dp"
                android:orientation="horizontal"
                android:theme="@style/DetailsBookRecycler"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/you_will_like_heading"
                tools:itemCount="10"
                tools:listitem="@layout/book_item" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/read_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/read_button_shape"
                android:fontFamily="@font/nunito_sans_800"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/read_now"
                android:textAllCaps="false"
                android:textColor="?white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/you_like_recycler"
                app:layout_constraintWidth_percent="0.74" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/bottom_line_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/read_button"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintWidth_percent="0.36" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

